# aurorachat-tr-beta

./: .gitattributes  .gitignore  .replit  CHANGELOG.md  build-electron.sh  electron-builder.json  github-sync.sh  index.html  nativefier.json  package-lock.json  package.json  replit.md  vite.config.ts
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted-1-Geli-mi-Engelleme-Sistemi-ve-Mesajla-ma-UI-Resim-2-4-_1774372762703.txt  Pasted-AuroraChat-projemde-v0-4-0-s-r-m-ne-ge-iyoruz-A-a-daki-_1774010537312.txt  Pasted-AuroraChat-projemde-v0-4-0-s-r-m-ne-ge-iyoruz-A-a-daki-_1774010609344.txt  Pasted-AuroraChat-projemin-mobil-aray-z-n-ve-kullan-c-deneyimi_1773930032337.txt  Pasted-AuroraChat-projemin-mobil-aray-z-n-ve-kullan-c-deneyimi_1773930044040.txt  Pasted-AuroraChat-projemin-mobil-aray-z-n-ve-kullan-c-deneyimi_1773930067314.txt  Pasted-AuroraChat-projesinde-v0-4-1-s-r-m-i-in-a-a-daki-kritik_1774025157201.txt  Pasted-G-rev-AuroraChat-uygulamas-nda-WebRTC-ses-ba-lant-sorun_1774541630520.txt  Pasted-G-rev-AuroraChat-uygulamas-nda-engelleme-sistemi-rol-ta_1774372729222.txt  Pasted-G-rev-AuroraChat-v0-6-1-g-ncellemesini-a-a-daki-teknik-_1774884431520.txt  Pasted-G-rev-AuroraChat-v0-6-1-g-ncellemesini-a-a-daki-teknik-_1774884486807.txt  Pasted-Rol-Uzman-Full-Stack-Geli-tirici-React-19-Supabase-Web-_1774690261840.txt  Pasted-Rol-ve-G-rev-Sen-k-demli-bir-Full-Stack-Geli-tiricisin-_1774627157329.txt  branding-1774102062403.json  branding-1774105893043.json  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/webview-dist/: index.html
(+177 files in other folders)
