[package]
name = "aurorachat"
version = "1.0.2"
description = "AuroraChat - Discord benzeri gerçek zamanlı sohbet uygulaması"
authors = ["AuroraChat Team"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = ["shell-open", "updater"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
